test/assets/2/error-messages/no-paren.txt
[1 of 1] Compiling Main             ( S:\s\makeMistakesToLearnHaskell\test\assets\2\no-paren.hs, S:\s\makeMistakesToLearnHaskell\test\assets\2\no-paren.o )

S:\s\makeMistakesToLearnHaskell\test\assets\2\no-paren.hs:1:8: error:
    ? No instance for (Fractional (IO ())) arising from a use of Åe/Åf
    ? In the first argument of Åe(*)Åf, namely Åeprint 60 / 1.7Åf
      In the expression: print 60 / 1.7 * 1.7
      In an equation for ÅemainÅf: main = print 60 / 1.7 * 1.7
  |
1 | main = print 60 / 1.7 * 1.7
  |        ^^^^^^^^^^^^^^

S:\s\makeMistakesToLearnHaskell\test\assets\2\no-paren.hs:1:8: error:
    ? No instance for (Num (IO ())) arising from a use of Åe*Åf
    ? In the expression: print 60 / 1.7 * 1.7
      In an equation for ÅemainÅf: main = print 60 / 1.7 * 1.7
  |
1 | main = print 60 / 1.7 * 1.7
  |        ^^^^^^^^^^^^^^^^^^^^
